Add Firebase Auth SDK to collector.html

--- a/site/collector.html
+++ b/site/collector.html
@@ -17,6 +17,8 @@
     <!-- Firebase SDKs -->
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
+
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
 </head>
 
